<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="download_notification_channel_id">1</string>
    <string name="download_notification_channel_name">Download</string>
    <string name="download_notification_channel_description">Download notification channel</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="detail_button_label">OK</string>

    <string name="glide_label">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_label">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_label">Retrofit - Type-safe HTTP client for Android and Java by Square,Inc</string>

    <string name="select_download_file_message">Please select file to download</string>
    <string name="status_label">Status:</string>
    <string name="file_name_label">File Name:</string>
</resources>
